@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.241
-Date: 2015-04-30
+Version: 0.6.3
+Date: 2015-05-12
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
