@@ -6,8 +6,8 @@
 GenerateHITLayoutParameter(names, values)
 }
 \arguments{
-  \item{names}{A character string containing the name of a HIT template variable or a vector of character strings containing the names of multiple HIT template variables.}
-  \item{values}{A character string containing the value of a HIT template variable to be inserted for a specific HIT or a vector of character strings containing the values of multiple HIT template variables to be inserted for a specific HIT.}
+  \item{names}{A character string containing the name of a HIT template variable or a vector of character strings containing the names of multiple HIT template variables. This is optional if \code{values} has a non-empty names attribute.}
+  \item{values}{A character string containing the value of a HIT template variable to be inserted for a specific HIT or a vector of character strings containing the values of multiple HIT template variables to be inserted for a specific HIT. If \code{values} has a non-empty names attribute and \code{names} is missing, the names attribute is used.}
 }
 \details{This function provides the content for the \code{hitlayoutparameters} option of \code{\link{CreateHIT}}. Specifically, a HIT Template created in the MTurk Requester User Interface (RUI) has a number of placeholder variables for content to be inserted. This fucntion supplies the content to be inserted into the template for one HIT. If multiple HITs are being created from one template, then \code{GenerateHITLayoutParameter} should be run once for each HIT.
 
@@ -28,12 +28,17 @@ Analogous functionality for producing .html files on the local workstation (e.g.
 }
 \examples{
 \dontrun{
+# examples of specifying 'names' and 'values'
 a <- GenerateHITLayoutParameter(names = "hitvariable", 
                                 values = "Text for HIT 1")
 b <- GenerateHITLayoutParameter(names = "hitvariable", 
                                 values = "Text for HIT 2")
 c <- GenerateHITLayoutParameter(names = c("hitvariable1","hitvariable2"),
                                 values = c("Headline for HIT1","Text for HIT 1"))
+
+# example using a named character string in lieu of specifying 'names'
+d <- GenerateHITLayoutParameter(values = c(hitvariable1 = "Headline for HIT1", 
+                                           hitvariable2 = "Text for HIT 1"))
 
 # create HIT using layout parameter
 hit1 <- 
