@@ -1,21 +1,20 @@
 \name{GenerateHITsFromTemplate}
 \alias{GenerateHITsFromTemplate}
-\alias{hitsfromtemplate}
 \title{Generate HITs from a Template}
-\description{Generate individual HIT .html files from a local .html HIT template file, in the same fashion as the MTurk Requester User Interface (RUI). This function facilitates the use of ExternalQuestion or HTMLQuestion data structures.}
+\description{Generate individual HIT .html files from a local .html HIT template file, in the same fashion as the MTurk Requester User Interface (RUI).}
 \usage{
 GenerateHITsFromTemplate(template, input, filenames = NULL, write.files = FALSE)
 }
 \arguments{
   \item{template}{A character string or filename for an .html HIT template}
-  \item{input}{A dataframe containing one row for each HIT to be created and columns named identically to the placeholders in the HIT template file. Operation will fail if variable names do not correspond.}
+  \item{input}{A data.frame containing one row for each HIT to be created and columns named identically to the placeholders in the HIT template file. Operation will fail if variable names do not correspond.}
+  \item{type}{A character string specifying how to wrap the resulting HIT question contents for use in \code{\link{CreateHIT}}. If set to \dQuote{HTMLQuestion}, \code{template} is passed to \code{\link{GenerateHTMLQuestion}} before use.}
   \item{filenames}{An optional list of filenames for the HITs to be created. Must be equal to the number of rows in \code{input}.}
   \item{write.files}{A logical specifying whether HIT .html files should be created and stored in the working directory. Or, alternatively, whether HITs should be returned as character vectors in a list.}
+  \item{\dots}{Additional arguments passed to \code{\link{CreateHIT}}.}
 }
 \details{
-Generate HITs from a HIT template (containing placeholders for input data of the form \code{\$\{variablename\}}). The tool provides functionality analogous to the MTurk RUI HIT template and can be performed on .html files generated therein. The HITs are returned as a list of character strings. If \code{write.files = TRUE}, a side effect occurs in the form of one or more .html files being written to the working directory, with filenames specified by the \code{filenames} option or, if \code{filenames=NULL} of the form \dQuote{NewHIT1.html}, \dQuote{NewHIT2.html}, etc.
-
-\code{hitsfromtemplate()} is an alias.
+\code{GenerateHITsFromTemplate} generates individual HIT question content from a HIT template (containing placeholders for input data of the form \code{\$\{variablename\}}). The tool provides functionality analogous to the MTurk RUI HIT template and can be performed on .html files generated therein. The HITs are returned as a list of character strings. If \code{write.files = TRUE}, a side effect occurs in the form of one or more .html files being written to the working directory, with filenames specified by the \code{filenames} option or, if \code{filenames=NULL} of the form \dQuote{NewHIT1.html}, \dQuote{NewHIT2.html}, etc.
 }
 \value{A list containing a character string for each HIT generated from the template.}
 \references{
@@ -25,7 +24,7 @@ Generate HITs from a HIT template (containing placeholders for input data of the
 }
 \author{Thomas J. Leeper}
 %\note{}
-%\seealso{}
+\seealso{\code{\link{BulkCreateFromTemplate}}}
 \examples{
 \dontrun{
 # create/edit template HTML file
